--- a/frontend/src/components/Button/button.css
+++ b/frontend/src/components/Button/button.css
@@ -7,15 +7,33 @@
 	font-weight: normal;
 	font-style: normal;
 	font-size: 16px;
-  
-	margin: 8px;
-  
+    
 	padding-top: 6px;
 	padding-right: 14px;
 	padding-bottom: 6px;
 	padding-left: 14px;
   
 	border-radius: 6px;
+}
+
+.clicked-button-style {
+	border: none;
+	background-color: #000000;
+  
+	color: #ffffff;
+	font-family: 'Helvetica Now Display', Helvetica, sans-serif;
+	font-weight: normal;
+	font-style: normal;
+	font-size: 16px;
+    
+	padding-top: 6px;
+	padding-right: 14px;
+	padding-bottom: 6px;
+	padding-left: 14px;
+  
+	border-radius: 6px;
+
+	transition: background-color 0.1s ease-in-out, color 0.1s ease-in-out;
 }
 
 .button-style:hover {
