--- a/frontend/src/components/Button/button.css
+++ b/frontend/src/components/Button/button.css
@@ -1,4 +1,5 @@
 .button-style {
+	width: 100%;
 	border: none;
 	background-color: #ffffff;
   
@@ -7,6 +8,7 @@
 	font-weight: normal;
 	font-style: normal;
 	font-size: 16px;
+	text-align: left;
     
 	padding-top: 6px;
 	padding-right: 14px;
@@ -17,6 +19,7 @@
 }
 
 .clicked-button-style {
+	width: 100%;
 	border: none;
 	background-color: #000000;
   
@@ -25,6 +28,7 @@
 	font-weight: normal;
 	font-style: normal;
 	font-size: 16px;
+	text-align: left;
     
 	padding-top: 6px;
 	padding-right: 14px;
@@ -37,6 +41,7 @@
 }
 
 .button-style:hover {
+	width: 100%;
 	background-color: #f2f2f2;
 	transition: background-color 0.2s ease-in-out;
 }
