--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -1,5 +1,9 @@
 .navbar-style {
+	display: flex;
+	gap: 8px;
+	flex-direction: column;
 	background-color: #ffffff;
+	padding: 8px;
 	width: 192px;
 	border-radius: 14px;
 }
