--- a/frontend/src/components/Login/login.css
+++ b/frontend/src/components/Login/login.css
@@ -1,10 +1,11 @@
-.navbar-style {
+.login {
 	display: flex;
-	gap: 8px;
 	flex-direction: column;
+	margin: auto;
+
+	padding: 16px;
 	background-color: #ffffff;
-	padding: 8px;
-	width: 192px;
-	border-radius: 14px;
+	border-radius: 14px;	
+	text-align: center;
 	box-sizing: border-box;
 }
