--- a/frontend/src/components/cta/cta.css
+++ b/frontend/src/components/cta/cta.css
@@ -1,4 +1,8 @@
 .cta-style {	
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
 	width: 192px;
 	border: none;
 	background-color: #f2f2f2;
@@ -10,12 +14,14 @@
 	font-size: 16px;
 	text-align: center;
     
-	padding-top: 6px;
+	padding-top: 14px;
 	padding-right: 14px;
-	padding-bottom: 6px;
+	padding-bottom: 14px;
 	padding-left: 14px;
   
 	border-radius: 6px;
+
+	cursor: pointer;
 }
 
 .cta-style:hover {
