--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -1,10 +1,9 @@
 .navbar-style {
 	display: flex;
-	gap: 8px;
 	flex-direction: column;
-	background-color: #ffffff;
-	padding: 8px;
+	background-color: var(--color-light);
+	padding: var(--margin-medium);
 	width: 192px;
-	border-radius: 14px;
+	border-radius: var(--border-radius-large);
 	box-sizing: border-box;
 }
