--- a/frontend/src/components/cta/cta.css
+++ b/frontend/src/components/cta/cta.css
@@ -5,10 +5,10 @@
 	
 	width: 192px;
 	border: none;
-	background-color: #f2f2f2;
+	background-color: var(--color-medium);
   
-	color: black;
-	font-family: 'Helvetica Now Display', Helvetica, sans-serif;
+	color: var(--color-dark);
+	font-family: var(--font-family-principal);
 	font-weight: normal;
 	font-style: normal;
 	font-size: 16px;
@@ -19,13 +19,13 @@
 	padding-bottom: 14px;
 	padding-left: 14px;
   
-	border-radius: 6px;
+	border-radius: var(--border-radius-small);
 
 	cursor: pointer;
 }
 
 .cta-style:hover {
 	width: 192px;
-	background-color: #e6e6e6;
+	background-color: var(--color-medium-dark);
 	transition: background-color 0.2s ease-in-out;
 }
