--- a/frontend/src/components/NavbarItem/navbar-item.css
+++ b/frontend/src/components/NavbarItem/navbar-item.css
@@ -1,4 +1,4 @@
-.button-style {
+.item-style {
 	width: 100%;
 	border: none;
 	background-color: var(--color-light);
@@ -18,7 +18,7 @@
 	border-radius: var(--border-radius-small);
 }
 
-.clicked-button-style {
+.clicked-item-style {
 	width: 100%;
 	border: none;
 	background-color: var(--color-dark);
@@ -40,7 +40,7 @@
 	transition: background-color 0.1s ease-in-out, color 0.1s ease-in-out;
 }
 
-.button-style:hover {
+.item-style:hover {
 	width: 100%;
 	background-color: var(--color-medium);
 	transition: background-color 0.2s ease-in-out;
