--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,7 +27,11 @@ body {
 }
 
 .page {
+	display: flex;
+	flex-direction: column;
+	gap: var(--margin-medium);
 	flex-grow: 1;
+	flex-basis: 0;
 	padding: var(--margin-medium);
 	box-sizing: border-box;
 
