--- a/frontend/src/var.css
+++ b/frontend/src/var.css
@@ -11,5 +11,6 @@
 	--color-light: #ffffff;
 	--color-medium: #f3f2f1;
 	--color-medium-dark: #E7E7E5;
+	--color-dark-soft: #B6B5AF;
 	--color-dark: #000000;
 }
