better CSS for game history

--- a/frontend/src/components/Profile/ProfilePicture/profile-picture.css
+++ b/frontend/src/components/Profile/ProfilePicture/profile-picture.css
@@ -1,4 +1,6 @@
 .profile-picture-style {
+	flex-shrink: 0;
+	
 	background-color: var(--color-medium);
 	border-radius: 50%;
 	background-size: cover;
