--- a/frontend/src/components/Chat/channels.css
+++ b/frontend/src/components/Chat/channels.css
@@ -1,5 +1,29 @@
+.banner {
+	display: flex;
+	flex-direction: row;
+	background-color: #c2c9d6;
+	border-radius: 14px;
+	text-align: center;
+	margin-left: 0px;
+}
+
+.banner h3 {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.banner .create-btn {
+	align-self: center;
+	margin-right: 5px;
+	border-radius: 50%;
+	border: none;
+	width: 30px;
+	height: 30px;
+	font-size: 23px;
+}
+
 .channels a {
-	text-decoration:none
+	text-decoration: none;
 }
 
 .channels button {
