--- a/frontend/src/components/Login/signIn42.css
+++ b/frontend/src/components/Login/signIn42.css
@@ -4,10 +4,10 @@
     position: fixed;
     top: 0;
     left: 0;
-    background: rgb(0, 0, 0)
-        url("https://media1.tenor.com/m/Cjh_A7l7oeUAAAAC/loading-now-loading.gif") center no-repeat;
-    /* background: rgb(46, 50, 68)
-        url("https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExdjlrZnU1MGFwc2kyeXU2MTE3YTltb3VsenFqbDNkMnd2Z3Qwam1uYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9dg/u2wg2uXJbHzkXkPphr/giphy.gif") center no-repeat; */
+    /* background: rgb(0, 0, 0)
+        url("https://media1.tenor.com/m/Cjh_A7l7oeUAAAAC/loading-now-loading.gif") center no-repeat; */
+    background: rgb(46, 50, 68)
+        url("https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExdjlrZnU1MGFwc2kyeXU2MTE3YTltb3VsenFqbDNkMnd2Z3Qwam1uYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9dg/u2wg2uXJbHzkXkPphr/giphy.gif") center no-repeat;
     background-size: contain;
     display: flex;
     align-items: center;
