--- a/frontend/src/components/Chat/channels.css
+++ b/frontend/src/components/Chat/channels.css
@@ -12,8 +12,9 @@
 	margin-right: auto;
 }
 
-.banner .create-btn {
+.banner input[type="button"] {
 	align-self: center;
+	margin-left: 5px;
 	margin-right: 5px;
 	border-radius: 50%;
 	border: none;
@@ -26,7 +27,7 @@
 	text-decoration: none;
 }
 
-.channels button {
+.channels input[type="button"] {
 	display: flex;
 	flex-direction: column;
 	margin-top: 5px;
@@ -37,3 +38,5 @@
 	border-radius: 14px;
 	font-size: 20px;
 }
+
+
