--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -1,6 +1,8 @@
 .navbar-style {
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
+
 	background-color: var(--color-light);
 	padding: var(--margin-medium);
 	width: 192px;
