--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,6 +53,14 @@ body {
 	border-radius: 14px;
 }
 
+.void-page {
+	display: flex;
+	flex-direction: column;
+	gap: var(--margin-medium);
+	flex-grow: 1;
+	flex-basis: 0;
+}
+
 h1 {
 	color: var(--color-dark);
 	font-family: var(--font-family-principal);
