--- a/frontend/src/components/Friends/friend-card.css
+++ b/frontend/src/components/Friends/friend-card.css
@@ -25,35 +25,8 @@
 .friend-card:hover {
 	border: solid 1.33px var(--color-dark);
 	box-shadow: 0px 4px 32px 4px var(--color-medium-dark);
-}
 
-.overlay {
-	display: flex;
-    position: absolute;
-	top: 5%;
-	left: 50%;
-	transform: translate(-50% , -50%);
-	
-	padding: 4px;
-	padding-left: 14px;
-	padding-right: 14px;
-	white-space: nowrap;
-
-	background-color: var(--color-light);
-
-	border: solid 1.33px var(--color-medium-dark);
-	border-radius: 999px;
-
-	transition:
-		top 0.4s,
-		opacity 0.2s;
-
-	opacity: 0;
-}
-
-.friend-card:hover .overlay {
-	top: 2%;
-    opacity: 1;
+	cursor: pointer;
 }
 
 .text-container {
