--- a/frontend/src/components/Friends/friends.css
+++ b/frontend/src/components/Friends/friends.css
@@ -5,6 +5,9 @@
 .friend-card-container-parent {
 	display: flex;
 
+	padding-top: 16px;
+	margin-top: -16px;
+
 	overflow-y: auto;
 }
 
@@ -12,4 +15,52 @@
 	display: flex;
 	flex-wrap: wrap;
 	gap: var(--margin-medium);
+}
+
+.friend-card-container-parent::-webkit-scrollbar {
+	width: 24px;
+	background: transparent;
+}
+
+.friend-card-container-parent::-webkit-scrollbar-thumb {
+	background: var(--color-dark-soft);
+	border-radius: 100px;
+	border: 8px solid transparent;
+	background-clip: padding-box;
+}
+
+.friend-card-container-parent::-webkit-scrollbar-thumb:hover {
+	background:var(--color-dark);
+	border-radius: 100px;
+	border: 7px solid transparent;
+	background-clip: padding-box;
+}
+
+.overlay {
+	display: flex;
+    position: absolute;
+	top: 5%;
+	left: 50%;
+	transform: translate(-50% , -50%);
+	
+	padding: 4px;
+	padding-left: 14px;
+	padding-right: 14px;
+	white-space: nowrap;
+
+	background-color: var(--color-light);
+
+	border: solid 1.33px var(--color-medium-dark);
+	border-radius: 999px;
+
+	transition:
+		top 0.4s,
+		opacity 0.2s;
+
+	opacity: 0;
+}
+
+.friend-card:hover .overlay {
+	top: 0%;
+    opacity: 1;
 }
