--- a/frontend/src/components/Friends/overlay.css
+++ b/frontend/src/components/Friends/overlay.css
@@ -1,8 +1,5 @@
 .overlay {
     position: absolute;
-	/* top: 5%;
-	left: 50%;
-	transform: translate(-50% , -50%); */
 
 	padding: 4px;
 	padding-left: 14px;
@@ -13,6 +10,8 @@
 
 	border: solid 1.33px var(--color-medium-dark);
 	border-radius: 999px;
+
+	opacity: 0;
 
 	transition:
 		top 0.4s,
