replace custom search by ant design search

--- a/frontend/src/components/Search/search.css
+++ b/frontend/src/components/Search/search.css
@@ -31,3 +31,7 @@
 	font-style: normal;
 	font-size: 32px;
 }
+
+.ant-select-selector .ant-select-selection-placeholder {
+	color: var(--color-dark-soft);
+}
