--- a/frontend/src/components/Friends/FriendCard/friend-card.css
+++ b/frontend/src/components/Friends/FriendCard/friend-card.css
@@ -23,7 +23,7 @@
 }
 
 .friend-card:hover {
-	border: solid 1.33px var(--color-dark);
+	border: solid 1.33px var(--color-dark-soft);
 	box-shadow: 0px 4px 32px 4px var(--color-medium-dark);
 
 	cursor: pointer;
