Modal for edit photo

--- a/frontend/src/var.css
+++ b/frontend/src/var.css
@@ -12,6 +12,7 @@
 	--color-light: #ffffff;
 	--color-medium: #f3f2f1;
 	--color-medium-dark: #E7E7E5;
+	--color-dark-extra-soft: #CFCECA;
 	--color-dark-soft: #B6B5AF;
 	--color-dark: #000000;
 
