--- a/frontend/src/components/Profile/profile.css
+++ b/frontend/src/components/Profile/profile.css
@@ -131,3 +131,63 @@
 	border: 7px solid transparent;
 	background-clip: padding-box;
 }
+
+.picture-container {
+	opacity: 1;
+}
+
+.picture-overlay-background {
+	position: absolute;
+	top: 32px;
+	left: 50%;
+	transform: translateX(-50%);
+
+	padding: 0px;
+
+	width: 256px;
+	height: 256px;
+	
+	background: linear-gradient(180deg, rgba(54, 53, 51, 0.00) 0%, #363533 100%);
+	border-style: solid;
+	border-width: 0px;
+	border-color: transparent;
+	border-radius: 999px;
+
+	cursor: pointer;
+
+	opacity: 0;
+
+	transition:
+		opacity 0.2s;
+}
+
+.picture-overlay-background:hover {
+	opacity: 1;
+}
+
+.picture-overlay-text {
+	position: relative;
+	
+	top: 15%;
+
+	white-space: nowrap;
+
+	color: var(--color-light);
+	font-family: var(--font-family-principal);
+	font-weight: normal;
+	font-style: normal;
+	font-size: 16px;
+	text-shadow: 0px 1px 14px var(--color-dark);
+	letter-spacing: 0.33px;
+
+	transition:
+		top 0.4s,
+		opacity 0.2s;
+
+	opacity: 0;	
+}
+
+.picture-overlay-background:hover .picture-overlay-text {
+	top: 2%;
+	opacity: 1;
+}
