--- a/frontend/src/components/Modal/modal.css
+++ b/frontend/src/components/Modal/modal.css
@@ -31,6 +31,16 @@
 	}
 }
 
+@keyframes modalFadeOut {
+	from {
+	  top: 50%;
+	}
+	to {
+	  top: 55%;
+	  opacity: 0;
+	}
+  }
+
 .modal-box {
 	display: flex;
 	flex-direction: column;
