--- a/frontend/src/components/Buttons/ButtonRedHover/button-red-hover.css
+++ b/frontend/src/components/Buttons/ButtonRedHover/button-red-hover.css
@@ -33,6 +33,17 @@
 	box-shadow: 0px 4px 16px 2px var(--color-warning-light);
 }
 
+.button-red-hover:active {
+	cursor: pointer;
+
+	background-color: var(--color-warning-medium);
+	color: var(--color-warning-dark);
+	border-color: var(--color-warning-dark);
+	box-shadow: 0px 0px 0px 0px var(--color-warning-light);
+
+	transform: translate(0%, 2%);
+}
+
 .button-red-hover-text {
 	color: var(--color-dark);
 	font-family: var(--font-family-principal);
