--- a/frontend/src/components/Buttons/XmarkIconoirButton/xmark-iconoir-button.css
+++ b/frontend/src/components/Buttons/XmarkIconoirButton/xmark-iconoir-button.css
@@ -10,11 +10,11 @@
 	padding: 0px;
 
 	background-color: var(--color-light);
-	color: var(--color-dark-soft);
+	color: var(--color-dark-medium);
 	border-style: solid;
 	border-width: 1px;
 	border-color: transparent;
-	border-radius: var(--border-radius-medium);
+	border-radius: var(--border-radius-small);
 
 	opacity: 0;
 
