--- a/frontend/src/components/Friends/Overlay/overlay.css
+++ b/frontend/src/components/Friends/Overlay/overlay.css
@@ -8,7 +8,7 @@
 
 	background-color: var(--color-light);
 
-	border: solid 1.33px var(--color-medium-dark);
+	border: solid 1.33px var(--color-medium);
 	border-radius: 999px;
 
 	opacity: 0;
