--- a/frontend/src/components/Friends/friends.css
+++ b/frontend/src/components/Friends/friends.css
@@ -2,7 +2,7 @@
 	display: flex;
 
 	justify-content: space-between;
-	gap: var(--margin-medium);
+	gap: var(--spacing-medium);
 
 	flex-shrink: 0;
 }
@@ -20,7 +20,7 @@
 .friend-card-container {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(192px, 1fr));
-	gap: var(--margin-medium);
+	gap: var(--spacing-medium);
 	width: 100%;	
 }
 
@@ -30,7 +30,7 @@
 }
 
 .friend-card-container-parent::-webkit-scrollbar-thumb {
-	background: var(--color-dark-soft);
+	background: var(--color-dark-medium);
 	border-radius: 100px;
 	border: 8px solid transparent;
 	background-clip: padding-box;
