--- a/frontend/src/components/ProfilePicture/profile-picture.css
+++ b/frontend/src/components/ProfilePicture/profile-picture.css
@@ -1,7 +1,7 @@
 .profile-picture-style {
 	flex-shrink: 0;
 
-	background-color: var(--color-medium);
+	background-color: var(--color-light-medium);
 	border-radius: 50%;
 	background-size: cover;
 	background-position: center;
