--- a/frontend/src/components/Friends/Overlay/overlay.css
+++ b/frontend/src/components/Friends/Overlay/overlay.css
@@ -1,15 +1,15 @@
 .overlay {
     position: absolute;
 
-	padding: 4px;
-	padding-left: 14px;
-	padding-right: 14px;
+	padding: var(--spacing-extra-extra-small);
+	padding-left:  var(--small-medium);
+	padding-right: var(--small-medium);
 	white-space: nowrap;
 
 	background-color: var(--color-light);
 
 	border: solid 1.33px var(--color-medium);
-	border-radius: 999px;
+	border-radius: var(--border-radius-full);
 
 	opacity: 0;
 
