--- a/frontend/src/var.css
+++ b/frontend/src/var.css
@@ -21,7 +21,7 @@
 */
 
 :root {
-	--font-family-principal: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", 'Helvetica Now Display', Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+	--font-family-principal: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", "Helvetica Now Display", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 
 	--spacing-extra-extra-small: 0.25rem;
 	--spacing-extra-small: 0.375rem;
@@ -33,9 +33,15 @@
 	--spacing-large-extra-large: 3rem;
 	--spacing-extra-large: 4rem;
 	
-	--border-radius-extra-small: 6px;
-	--border-radius-small: 8px;
-	--border-radius-medium: 16px;
+	--border-radius-extra-small: 0.375rem;
+	--border-radius-small-medium: 0.75rem;
+	--border-radius-small: 0.5rem;
+	--border-radius-medium: 1rem;
+	--border-radius-full: 999px;
+
+	--font-size-medium: 1rem;
+	--font-size-large: 2rem;
+	--font-size-extra-large: 4rem;
 
 	--color-light: #ffffff;
 	--color-light-medium: #f3f2f1;
