--- a/frontend/src/components/Buttons/ButtonRegular/button-regular.css
+++ b/frontend/src/components/Buttons/ButtonRegular/button-regular.css
@@ -2,11 +2,13 @@
 	display: flex;
 	align-items: center;
 
-	gap: 12px;
+	gap: var(--spacing-small-medium);
+
+	cursor: pointer;
 
 	padding: var(--spacing-small);
-	padding-right: 16px;
-	padding-left: 16px;
+	padding-right: var(--spacing-medium);
+	padding-left: var(--spacing-medium);
 	
 	background-color: var(--color-light-medium);
 	border-style: solid;
@@ -24,17 +26,14 @@
 }
 
 .button-regular:hover {
-	cursor: pointer;
-
 	border-color: var(--color-dark-medium);
 	transform: translate(0%, -5%);
 	box-shadow: 0px 4px 16px 2px var(--color-light-medium);
 }
 
 .button-regular:active {
-	cursor: pointer;
-
 	background-color: var(--color-medium);
+	border-color: var(--color-dark-medium);
 	transform: translate(0%, 2%);
 	box-shadow: 0px 0px 0px 0px var(--color-light-medium);
 }
@@ -44,5 +43,5 @@
 	font-family: var(--font-family-principal);
 	font-weight: normal;
 	font-style: normal;
-	font-size: 16px;
+	font-size: var(--font-size-medium);
 }
