--- a/frontend/src/components/Buttons/ButtonReturn/return-button.css
+++ b/frontend/src/components/Buttons/ButtonReturn/return-button.css
@@ -7,11 +7,13 @@
 	display: flex;
 	align-items: center;
 
-	gap: 12px;
+	gap: var(--spacing-small-medium);
+
+	cursor: pointer;
 
 	padding: var(--spacing-small);
-	padding-right: 16px;
-	padding-left: 16px;
+	padding-right: var(--spacing-medium);
+	padding-left: var(--spacing-medium);
 	
 	background-color: var(--color-light-medium);
 	border-style: solid;
@@ -21,7 +23,7 @@
 
 	color: var(--color-dark);
 
-	transform: translate(16px, 16px);
+	transform: translate(var(--spacing-medium), var(--spacing-medium));
 
 	transition:
 		border-color 0.2s,
@@ -31,18 +33,15 @@
 }
 
 .return-button:hover {
-	cursor: pointer;
-
 	border-color: var(--color-dark-medium);
-	transform: translate(16px, 14px);
+	transform: translate(var(--spacing-medium), var(--spacing-small-medium));
 	box-shadow: 0px 4px 16px 2px var(--color-light-medium);
 }
 
 .return-button:active {
-	cursor: pointer;
-
 	background-color: var(--color-medium);
-	transform: translate(16px, 16px);
+	border-color: var(--color-dark-medium);
+	transform: translate(var(--spacing-medium), var(--spacing-medium));
 	box-shadow: 0px 0px 0px 0px var(--color-light-medium);
 }
 
@@ -51,5 +50,5 @@
 	font-family: var(--font-family-principal);
 	font-weight: normal;
 	font-style: normal;
-	font-size: 16px;
+	font-size: var(--font-size-medium);
 }
