--- a/frontend/src/components/Cta/cta.css
+++ b/frontend/src/components/Cta/cta.css
@@ -4,28 +4,44 @@
 	align-items: center;
 	
 	width: 192px;
-	border: none;
+
+	gap: var(--spacing-small-medium);
+
+	cursor: pointer;
+
 	background-color: var(--color-light-medium);
-  
+	border-style: solid;
+	border-width: 1px;
+	border-color: var(--color-medium);
+	border-radius: var(--border-radius-small);
+ 
 	color: var(--color-dark);
+
 	font-family: var(--font-family-principal);
 	font-weight: normal;
 	font-style: normal;
-	font-size: 16px;
+	font-size: var(--font-size-medium);
 	text-align: center;
-    
-	padding-top: 14px;
-	padding-right: 14px;
-	padding-bottom: 14px;
-	padding-left: 14px;
-  
+
+	padding: var(--spacing-small-medium);
+
 	border-radius: var(--border-radius-extra-small);
 
-	cursor: pointer;
+	transition:
+		border-color 0.2s,
+		box-shadow 0.2s,
+		transform 0.2s;
 }
 
 .cta-style:hover {
-	width: 192px;
+	border-color: var(--color-dark-medium);
+	transform: translate(0%, -5%);
+	box-shadow: 0px 4px 16px 2px var(--color-light-medium);
+}
+
+.cta-style:active {
 	background-color: var(--color-medium);
-	transition: background-color 0.2s ease-in-out;
+	border-color: var(--color-dark-medium);
+	transform: translate(0%, 2%);
+	box-shadow: 0px 0px 0px 0px var(--color-light-medium);
 }
