--- a/frontend/src/components/Friends/friends.css
+++ b/frontend/src/components/Friends/friends.css
@@ -91,7 +91,7 @@
 	height: 128px;
 
 	background: linear-gradient(180deg, rgba(54, 53, 51, 0.00) 0%, #363533 100%);
-	border-radius: 999px;
+	border-radius: var(--border-radius-full);
 
 	transition:
 		top 0.4s,
