--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -9,3 +9,10 @@
 	border-radius: var(--border-radius-small-medium);
 	box-sizing: border-box;
 }
+
+.first-container-navbar {
+	display: flex;
+	flex-direction: column;
+
+	gap: var(--spacing-extra-extra-small);
+}
