--- a/frontend/src/var.css
+++ b/frontend/src/var.css
@@ -56,4 +56,8 @@
 	--color-warning-light: #fff7f7;
 	--color-warning-medium: #ffe6e6;
 	--color-warning-dark: #d64040;
+
+	--color-success-light: #f2fffb;
+	--color-success-medium: #e6fff7;
+	--color-success-dark: #009966;
 }
