css for channel

--- a/frontend/src/components/Chat/channels.css
+++ b/frontend/src/components/Chat/channels.css
@@ -30,6 +30,15 @@
 	font-size: 23px;
 }
 
+.channels {
+	display: flex;
+	flex-direction: column;
+
+	height: 100%;
+
+	gap: var(--spacing-medium);
+}
+
 .channels a {
 	text-decoration: none;
 }
